--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 body {
-    font-family: 'Google Sans Flex', sans-serif;
+  font-family: "Google Sans Flex", sans-serif;
 }
 
-h1, h2, h3, .card-title {
-    font-family: 'Google Sans Flex', sans-serif;
-    font-weight: 700;
+h1,
+h2,
+h3,
+.card-title {
+  font-family: "Google Sans Flex", sans-serif;
+  font-weight: 700;
 }
 
 p {
-    font-family: 'Google Sans Flex', sans-serif;
-    font-weight: 400;
+  font-family: "Google Sans Flex", sans-serif;
+  font-weight: 400;
 }
 
+/* styling card dinamis */
+.cards-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.film-card {
+  width: fit-content;
+  max-width: 100%;
+  flex: 0 0 auto;
+}
+
+@media (max-width: 768px) {
+  .film-card {
+    width: 100%;
+    max-width: 100%;
+  }
+}
